test/modules/use/topLevel/noUseTop2.chpl
module MMM {
  proc foo() {
    writeln("In foo");
  }
}

module NNN {
  MMM.foo();
  proc main() {
    use MMM;
  }
}
